envoy-docker.yaml
static_resources:
  listeners:
    - name: listener_gateway
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/api/short-link/project"
                          route:
                            cluster: shortlink-aggregation
                        - match:
                            prefix: "/api/short-link/admin"
                          route:
                            cluster: shortlink-aggregation
                        - match:
                            prefix: "/api/short-link/aggregation"
                          route:
                            cluster: shortlink-aggregation
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

    # Agg cluster
    - name: shortlink-aggregation
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: shortlink-aggregation
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: shortlink-aggregation
                      port_value: 8003
